Wordle: Built genetic algorithm.

--- a/SolvitaireGUI/Views/GeneticAlgorithm/GeneticAlgorithmTabView.xaml
+++ b/SolvitaireGUI/Views/GeneticAlgorithm/GeneticAlgorithmTabView.xaml
@@ -260,6 +260,10 @@
                                         DataType="{x:Type local:ConnectFourGeneticAlgorithmParametersViewModel}">
                                         <local:ConnectFourGeneticParametersControl />
                                     </DataTemplate>
+                                    <DataTemplate
+                                        DataType="{x:Type local:WordleGeneticAlgorithmParametersViewModel}">
+                                        <local:WordleGeneticParametersControl />
+                                    </DataTemplate>
                                 </ContentControl.Resources>
                             </ContentControl>
                         </StackPanel>
